--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^5.4.2",
+    "fortawesome": "^0.0.1-security",
     "next": "13.5.4",
     "prisma": "^5.4.2",
     "react": "18.2.0",
